<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnColor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="172dp"
        android:text="@string/color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNumber"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="172dp"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/btnColor"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAnimal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/animal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColor" />

    <Button
        android:id="@+id/btnGeometry"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/figure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/btnAnimal"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>