<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".animal.AnimalFragment">


    <TextView
        android:id="@+id/tvAnimalContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animalContent"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/tvAnimalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animalPreview"
        android:textSize="15sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnimalContent"
        app:layout_constraintVertical_bias="0.027" />

    <ImageView
        android:id="@+id/imAnimal"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:adjustViewBounds="true"
        android:minWidth="199dp"
        android:minHeight="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAnimalView"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/start"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnAnimalShow"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnintuit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imAnimal"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/tvAnswerAnimal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnimalShow"
        app:layout_constraintVertical_bias="0.202"
        tools:text="ANIMAL" />
</androidx.constraintlayout.widget.ConstraintLayout>